syntax = "proto3";

package orchestrator;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/rancher/opni/plugins/topology/apis/orchestrator";

service TopologyOrchestrator {
  rpc GetClusterStatus(google.protobuf.Empty) returns (InstallStatus) {
    option (google.api.http) = {
      get: "/cluster/status"
    };
  }
}

enum InstallState {
  Unknown      = 0;
  NotInstalled = 1;
  Updating     = 2;
  Installed    = 3;
  Uninstalling = 4;
}

message InstallStatus {
  InstallState        state    = 1;
  string              version  = 2;
  map<string, string> metadata = 3;
}
